[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylibrequest"
version = "0.0.1"
authors = [
  { name="Pylib", email="pylibrequest@hotmail.com" },
]
description = "Simple python module to perform your web requests simultaneously in an asynchronous, simple, efficient and powerful way."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pylibdepot/pylibrequest"
"Bug Tracker" = "https://github.com/pylibdepot/pylibrequest/issues"
